@@ -12,4 +12,5 @@ X-GNOME-Bugzilla-Product=totem
 X-GNOME-Bugzilla-Component=general
 X-GNOME-Bugzilla-Version=@VERSION@
 X-GNOME-Bugzilla-OtherBinaries=totem-video-indexer;totem-video-thumbnailer;totem-audio-preview;
+X-GNOME-Bugzilla-ExtraInfoScript=@FULL_LIBEXECDIR@/totem/totem-bugreport.py
 StartupNotify=true
