@@ -1,3 +1,12 @@
+2008-02-24  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* data/Makefile.am:
+	* data/totem-bugreport.py:
+	* data/totem.desktop.in.in.in: Add a custom Bug Buddy script
+	to get the format of the file last played if using GStreamer.
+	Adapted from a patch by Fernando Herrera
+	<fherrera@onirica.com>. (Closes: #382074)
+
 2008-02-21  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* browser-plugin/README.browser-plugin:
